test/Runner/errors/tests/MI/Hook/Hook2.runtime.js
eve("Suite", () => {
	seed("Seed", () => {});
	beforeSeed(async () => {
		await new Promise(() => {
			throw new Error();
		})
	});
})
